@@ -1,3 +1,10 @@
+2019-03-25  Mike Crowe  <mac@mcrowe.com>
+
+	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
+	pthread_rwlock_timedrdlock with calls to
+	pthread_rwlock_timedwrlock to ensure that the latter is tested
+	too. Use new function name in diagnostic messages too.
+
 2019-01-31  Carlos O'Donell  <carlos@redhat.com>
 	    Torvald Riegel  <triegel@redhat.com>
 	    Rik Prohaska  <prohaska7@gmail.com>
